--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: keycloak
     restart: always
     environment:
-      KEYCLOAK_USER: ${KEYCLAOK_USER}
+      KEYCLOAK_USER: ${KEYCLOAK_USER}
       KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
       DB_VENDOR: mysql
       DB_ADDR: keycloak_db
